# BACKSIDE-NLP-NEW

./: .gitignore  00_ARCHITECTURE_MAP.txt  00_MANIFEST.json  00_README_FOR_CODEX.md  CODEX_CLASSIFY_AND_TRACKER_PROMPT.md  CODEX_FOLLOWUP_FIX_GAPS.md  CODEX_TASK_KNOWLEDGE_GRAPHS.md  CODEX_TASK_LEXICON_WIRING.md  CODEX_TASK_PAPER_GRADER_WORKFLOW.md  CODEX_TEMPLATE_WIRING_PROMPT.md  CODEX_WIRE_ALL_NONE_STATIONS.md  CODEX_WIRING_PROMPT.md  PHASE2_CODEX_PROMPT.md  PROOF_EXPLORER_COMPONENT_MAP.md  SESSION_HANDOFF_20260617.md  SESSION_HANDOFF_20260617_OPUS.md  SESSION_HANDOFF_20260617_OPUS_FALL_PAPER.md  SESSION_HANDOFF_20260617_OPUS_LEXICON_GRADER.md  SESSION_HANDOFF_20260617_PAPER_GRADER.md  SESSION_HANDOFF_20260618_OPUS_NLP_PIPELINE.md  SESSION_HANDOFF_20260618_OPUS_PIPELINE_TEST.md  SYSTEM_MAP.md  WIRING_SPEC_SCHEMA.md  WORKFLOW_MAP_ARTICLE_PRODUCTION.md  WORKFLOW_STAGES.md  _tmp_inspect_classify.py  fix_merge.py  run_test_article.py  smart_sync.py  smoke_test.py  sync_models_structure.py  sync_stations_clean.py  wire_section07.py
stations/brain-map.station/theophysics-brain-map-main/Backside/brain_dashboard/: README.md  RUN.bat  pyproject.toml
stations/brain-map.station/theophysics-brain-map-main/Backside/brain_dashboard/src/brain_dashboard/: __main__.py  (+2 more)
stations/brain-map.station/theophysics-brain-map-main/Backside/conversion_lib/: pyproject.toml
stations/brain-map.station/theophysics-brain-map-main/Backside/conversion_lib/config/: x_drive.yaml
stations/brain-map.station/theophysics-brain-map-main/Backside/conversion_lib/tests/: test_convert.py  test_detect.py
(+6699 files in other folders)
