[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-dashboard"
version = "0.1.0"
description = "Read-only PySide6 dashboard for Theophysics brain runtime state"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "qt-material>=2.14",
  "pyyaml>=6.0",
]

[project.scripts]
brain-dashboard = "brain_dashboard.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
